Agrego vista previa de las imagenes a cargar

--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -68,7 +68,7 @@
                 <ul class="dropdown-menu card border">
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/administrador/altaCliente}">
+                            <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
                                 <div class="center">
                                     <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
                                 </div>
@@ -81,7 +81,7 @@
 
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/administrador/clientes}">
+                            <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
                                 <div class="center">
                                     <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
                                 </div>
