--- a/src/main/resources/templates/equipos/altaEquipo.html
+++ b/src/main/resources/templates/equipos/altaEquipo.html
@@ -38,18 +38,31 @@
 
                 <!-- Grupo: Imagen Equipo -->
                 <div class="formulario-grupo" id="grupo-foto">
-                    <label class="formulario-label" for="img">Foto: (opcional)</label>
-                    <div class="formulario-grupo-input">
-                        <div class="w100 center mrt-10">
-                            <label for="img" class="btn btn-dark"><img class="w25 mr-10"
-                                    th:src="@{/iconos/felicidad.png}" alt="felicidad">
-                                Subir foto</label>
+                            <label class="formulario-label" for="img">Foto: (opcional)</label>
+                            <div class="w100 center mrt-10">
+                                <!-- Vista previa de la imagen (inicialmente oculta) -->
+                                <img id="vista-previa" src="#" alt="Vista previa"
+                                    style="display: none; width: 100px; height: 100px; margin-top: 10px; border-radius: 10%;">
+                            </div>
+                            <div class="w100 center mrt-10">
+                                <p id="fichero"></p>
+                            </div>
+
+                            <div class="formulario-grupo-input">
+                                <div class="w100 center mrt-10">
+                                    <label for="img" class="btn btn-dark">
+                                        <img class="w25 mr-10" th:src="@{/iconos/felicidad.png}" alt="felicidad">
+                                        Subí tu foto
+                                    </label>
+
+                                </div>
+                                <div class="oculto">
+                                    <input type="file" class="form-control-file btn" id="img" name="img"
+                                        accept="image/*">
+                                </div>
+                                <br>
+                            </div>
                         </div>
-                        <div class="oculto">
-                            <input type="file" class="form-control-file btn" id="img" name="img">
-                        </div>
-                    </div>
-                </div>
 
                 <div class="formulario mrt-10">
                     <!-- Grupo: Equipo -->
@@ -166,6 +179,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script th:src="@{/scripts/formulario.js}"></script>
 </body>
 
 </html>
