--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -34,18 +34,30 @@
                     <div class="card border mr30">
 
                         <!-- Grupo: Foto Perfil -->
-                        <div class="formulario-grupo mr30" id="grupo-foto">
+                        <div class="formulario-grupo" id="grupo-foto">
                             <label class="formulario-label" for="img">Foto: (opcional)</label>
+                            <div class="w100 center mrt-10">
+                                <!-- Vista previa de la imagen (inicialmente oculta) -->
+                                <img id="vista-previa" src="#" alt="Vista previa"
+                                    style="display: none; width: 100px; height: 100px; margin-top: 10px; border-radius: 10%;">
+                            </div>
+                            <div class="w100 center mrt-10">
+                                <p id="fichero"></p>
+                            </div>
+
                             <div class="formulario-grupo-input">
                                 <div class="w100 center mrt-10">
-                                    <label for="img" class="btn btn-dark"><img class="w25 mr-10"
-                                            th:src="@{/iconos/felicidad.png}" alt="felicidad">
-                                        Subí tu foto</label>
+                                    <label for="img" class="btn btn-dark">
+                                        <img class="w25 mr-10" th:src="@{/iconos/felicidad.png}" alt="felicidad">
+                                        Subí tu foto
+                                    </label>
+
                                 </div>
                                 <div class="oculto">
-                                    <input type="file" class="form-control-file btn" id="img" name="img">
+                                    <input type="file" class="form-control-file btn" id="img" name="img"
+                                        accept="image/*">
                                 </div>
-                                <p id="fichero"></p>
+                                <br>
                             </div>
                         </div>
                     </div>
