--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -156,6 +156,10 @@ body {
     align-items: center;
 }
 
+.texto-footer {
+    color: #fff;
+}
+
 
 /* Estilos Iniciar Sesión */
 
@@ -210,6 +214,7 @@ body {
     height: 0px;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .alerta-error {
@@ -223,6 +228,7 @@ body {
     text-align: center;
     border-radius: 5px;
     animation: desaparecer 10s forwards;
+    z-index: 11;
 }
 
 .contenedor-exito {
@@ -233,6 +239,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 20px;
+    z-index: 10;
 }
 
 .alerta-exito {
@@ -246,6 +253,7 @@ body {
     text-align: center;
     border-radius: 5px;
     animation: desaparecer 10s forwards;
+    z-index: 11;
 }
 
 @keyframes desaparecer {
