--- a/src/main/resources/templates/administrador/perfilAdmin.html
+++ b/src/main/resources/templates/administrador/perfilAdmin.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{administrador/templateAdmin.html::header-Admin}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{administrador/templateAdmin.html::header-admin}" th:unless="${sesion==null}"></div>
 
     <main>
 
