--- a/src/main/resources/templates/tecnico/templateTecnico.html
+++ b/src/main/resources/templates/tecnico/templateTecnico.html
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
+                <p>elavincho 2025 - All Right Reserved</p>
             </div>
         </div>
     </footer>
