--- a/src/main/resources/templates/usuario/cambiarContrasena.html
+++ b/src/main/resources/templates/usuario/cambiarContrasena.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-user-sin-rol}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{/usuario/templateUsuario.html::header-user-sin-rol}" th:unless="${sesion==null}"></div>
 
     <main>
         <h1 class="center mrt-30">Cambiar Contraseña</h1>
