--- a/src/main/resources/templates/usuario/linkCambiarContrasena.html
+++ b/src/main/resources/templates/usuario/linkCambiarContrasena.html
@@ -46,7 +46,7 @@
                 <div class="center">
                     <div class="ml-10 mrt-30">
                         <div class="card border mr-10 mrt-10">
-                            <div class="mrt-10">
+                            <div class="mrt-10" style="margin: 10px;">
                                 <label for="password2"><strong>Nueva Contraseña</strong></label>
                                 <input type="password" class="form-control" id="password2" name="password2" required
                                     placeholder="Ingrese su Contraseña" autocomplete="off">
@@ -56,7 +56,7 @@
 
                     <div class="mrt-30">
                         <div class="card border mr-10 mrt-10">
-                            <div class="mrt-10">
+                            <div class="mrt-10" style="margin: 10px;">
                                 <label for="password3"><strong>Confirmar Nueva Contraseña</strong></label>
                                 <input type="password" class="form-control" id="password3" name="password3" required
                                     placeholder="Ingrese su Contraseña" autocomplete="off">
@@ -69,7 +69,7 @@
                     <a class="btn btn-secondary" th:href="@{/usuario/iniciarSesion}"><img class="w25" th:src="@{/iconos/cancelar.png}"
                             alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml-10"><img class="w25" th:src="@{/iconos/guardar.png}"
-                            alt="guardar"> Guardar Cambios</button>
+                            alt="guardar"> Guardar</button>
                     <!-- <a th:onclick="actualizarContrasena()" class="btn btn-dark ml10" style="color: white;"><img class="w25"
                             th:src="@{/img/guardar.png}" alt="guardar"> Guardar Cambios</a> -->
                 </div>
