--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -141,7 +141,7 @@
         <div class="contenedor-header" th:each="usuario:${usuario}">
             <div class="logo-header">
                 <a th:href="@{/usuario/homeNuevoUsuario}">
-                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo">
+                    <img class="img-logo-header" th:src="@{/imagenes/logo.png}" alt="logo" style="width: 75px; height: 75px;">
                 </a>
             </div>
             <div class="menu-header">
@@ -228,11 +228,13 @@
             </div>
             <div class="menu-header">
                 <a th:href="@{/usuario/iniciarSesion}"><img class="icono-header" th:src="@{/iconos/login.png}"
-                        alt="login">
-                    Iniciar Sesión
+                        alt="login" style="width: 40px; height: 40px; margin-right: 15px;">
+                        <br>
+                    Login
                 </a>
                 <a th:href="@{/usuario/registro}"><img class="icono-header" th:src="@{/iconos/registro.png}"
-                        alt="registro">
+                        alt="registro" style="width: 40px; height: 40px;">
+                        <br>
                     Registro
                 </a>
             </div>
@@ -250,7 +252,7 @@
                 </a>
             </div>
             <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
+                <p>elavincho 2025 - All Right Reserved</p>
             </div>
         </div>
     </footer>
@@ -266,7 +268,7 @@
                 </a>
             </div>
             <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
+                <p>elavincho 2025 - All Right Reserved</p>
             </div>
         </div>
     </footer>
@@ -282,7 +284,7 @@
                 </a>
             </div>
             <div class="texto-footer">
-                <p>Developers 2026 - All Right Reserved</p>
+                <p>elavincho 2025 - All Right Reserved</p>
             </div>
         </div>
     </footer>
