--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -20,199 +20,202 @@
     <!-- Main -->
     <main>
         <br>
-
         <div class="container">
-        <div class="contenedor-dashboard">
-            <div class="izquierda card border" style="margin-right: 10px;">
-                <div class="mr15">
-                    <div class="center">
-                        <img class="border" style="width: 100%; height: 100%; border-radius: 5px;"
-                            th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
+            <div class="contenedor-dashboard">
+                <div class="izquierda card border">
+                    <div class="mr15">
+                        <div class="center">
+                            <img class="border" style="width: 100%; height: 100%; border-radius: 5px;"
+                                th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card border" style="margin-right: 10px; margin-left: 5px;">
+                    <div class="centro card border mr15" style="padding: 10px;">
+                        <br>
+                        <h1>Administrador</h1>
+                        <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
+                        <br>
+                    </div>
+                </div>
+
+                <div class="derecha spac-around">
+                    <div class="card border">
+                        <div class="card border mr15" style="padding: 10px;">
+                            <br>
+                            <h3 class="center" id="diaSemana"></h3>
+                            <h1 class="center" id="diaMes"></h1>
+                            <br>
+                        </div>
+                    </div>
+
+                    <div class="card border">
+                        <div class="card border mr15" style="padding: 10px;">
+                            <br>
+                            <h3 class="center" id="mes"></h3>
+                            <h1 class="center" id="anio"></h1>
+                            <br>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card border">
-                <div class="centro card border mr15" style="padding: 10px;">
-                    <h1>Administrador</h1>
-                    <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
-                </div>
+            <div class="contenedor-exito">
+                <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
+            </div>
+            <div class="contenedor-error">
+                <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
             </div>
 
-            <div class="derecha spac-around">
-                <div class="card border">
-                    <div class="card border mr15" style="padding: 10px;">
-                        <h3 class="center" id="diaSemana"></h3>
-                        <h1 class="center" id="diaMes"></h1>
-                    </div>
-                </div>
-
-                <div class="card border">
-                    <div class="card border mr15" style="padding: 10px;">
-                        <h3 class="center" id="mes"></h3>
-                        <h1 class="center" id="anio"></h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="contenedor-exito">
-            <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
-        </div>
-        <div class="contenedor-error">
-            <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
-        </div>
-
-        <div class="contenedor-dashboard">
-            <div class="izquierda">
-                <ul class="dropdown-menu card border">
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Alta Cliente</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Clientes</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/equipos-negro.png}" alt="equipos">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Equipos</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/orden/ordenes}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/reparaciones-negro.png}"
-                                        alt="reparaciones-negro">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Ordenes</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/administrador/tecnicos}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/soporte-it.png}"
-                                        alt="soporte-it">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Técnicos</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Cerrar Sesión</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="centro">
-                <div class="spac-around">
-                    <div class="contenedor-tarjeta-estirada">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Clientes Registrados</h3>
-                                <h1 class="center" th:text="${cantidadClientes}"></h1>
+            <div class="contenedor-dashboard">
+                <div class="izquierda">
+                    <ul class="dropdown-menu card border">
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Alta Cliente</p>
+                                    </div>
+                                </a>
                             </div>
-                        </div>
-                    </div>
+                        </li>
 
-                    <div class="contenedor-tarjeta-estirada">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes Pendientes</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Clientes</p>
+                                    </div>
+                                </a>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/equipos-negro.png}" alt="equipos">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Equipos</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/orden/ordenes}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/reparaciones-negro.png}"
+                                            alt="reparaciones-negro">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Ordenes</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/administrador/tecnicos}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/soporte-it-negro.png}" alt="soporte-it">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Técnicos</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Cerrar Sesión</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
 
-                <div class="spac-around">
-                    <div class="contenedor-tarjeta-estirada justify-end">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes x Avisar</h3>
-                                <h1 class="center" th:text="${ordenAviso.get('NO')}"></h1>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="contenedor-tarjeta-estirada justify-end">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes en Curso</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="derecha">
-                <div class="card border h-350 center">
-                    <!-- Grupo: Perfil -->
-                    <div class="contenedor-tarjeta">
-                        <div class="card border mr30">
-                            <a th:href="@{/administrador/perfilAdmin}">
+                <div class="centro">
+                    <div class="spac-around">
+                        <div class="contenedor-tarjeta-estirada">
+                            <div class="card border">
                                 <div class="card border mr15">
-                                    <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
-                                    <h5 class="center black">Ver Perfil</h5>
+                                    <br>
+                                    <h3 class="center">Clientes Registrados</h3>
+                                    <h1 class="center" th:text="${cantidadClientes}"></h1>
                                 </div>
-                            </a>
+                            </div>
+                        </div>
+
+                        <div class="contenedor-tarjeta-estirada">
+                            <div class="card border">
+                                <div class="card border mr15">
+                                    <br>
+                                    <h3 class="center">Ordenes Pendientes</h3>
+                                    <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="spac-around">
+                        <div class="contenedor-tarjeta-estirada justify-end">
+                            <div class="card border">
+                                <div class="card border mr15">
+                                    <br>
+                                    <h3 class="center">Ordenes x Avisar</h3>
+                                    <h1 class="center" th:text="${ordenAviso.get('NO')}"></h1>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="contenedor-tarjeta-estirada justify-end">
+                            <div class="card border">
+                                <div class="card border mr15">
+                                    <br>
+                                    <h3 class="center">Ordenes en Curso</h3>
+                                    <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="derecha">
+                    <div class="card border h-350 center">
+                        <br>
+                        <!-- Grupo: Perfil -->
+                        <div class="contenedor-tarjeta">
+                            <div class="card border mr30">
+                                <a th:href="@{/administrador/perfilAdmin}">
+                                    <div class="card border mr15 center">
+                                        <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
+                                        <h5 class="center black">Ver Perfil</h5>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
-</div>
     </main>
     <br><br>
 
