--- a/src/main/resources/templates/tecnico/homeTecnico.html
+++ b/src/main/resources/templates/tecnico/homeTecnico.html
@@ -19,137 +19,138 @@
 
     <!-- Main -->
     <main>
-        <br>
-        <div class="contenedor-dashboard">
-            <div class="izquierda card border" style="margin-right: 10px;">
-                <div class="card border mr15">
-                    <div class="center">
-                        <img class="" style="width: 100px; height: 100px; border-radius: 5px;"
-                            th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
-                    </div>
-                </div>
-            </div>
+        <br><br><br>
 
-            <div class="card border">
-                <div class="centro card border mr15" style="padding: 10px;">
-                    <h1>Home Técnico</h1>
-                    <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
-                </div>
-            </div>
-
-            <div class="derecha spac-around">
-                <div class="card border">
-                    <div class="card border mr15" style="padding: 10px;">
-                        <h3 class="center" id="diaSemana"></h3>
-                        <h1 class="center" id="diaMes"></h1>
+        <div class="container">
+            <div class="contenedor-dashboard">
+                <div class="izquierda card border" style="margin-right: 10px;">
+                    <div class="card border mr15">
+                        <div class="center">
+                            <img class="border" style="width: 100%; height: 100%; border-radius: 5px;"
+                                th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
+                        </div>
                     </div>
                 </div>
 
                 <div class="card border">
-                    <div class="card border mr15" style="padding: 10px;">
-                        <h3 class="center" id="mes"></h3>
-                        <h1 class="center" id="anio"></h1>
+                    <div class="centro card border mr15" style="padding: 10px;">
+                        <h1>Home Técnico</h1>
+                        <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="contenedor-exito">
-            <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
-        </div>
-        <div class="contenedor-error">
-            <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
-        </div>
-
-        <div class="contenedor-dashboard">
-            <div class="izquierda">
-                <ul class="dropdown-menu card border">
-                   
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/equipos-negro.png}" alt="equipos">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Equipos</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/orden/ordenes}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/reparaciones-negro.png}"
-                                        alt="reparaciones-negro">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Ordenes</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Cerrar Sesión</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="centro">
-                <div class="spac-around">
-                   
-                    <div class="contenedor-tarjeta-estirada">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes Pendientes</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
-                            </div>
+                <div class="derecha spac-around" style="margin-left: 10px;">
+                    <div class="card border">
+                        <div class="card border mr15" style="padding: 10px;">
+                            <h3 class="center" id="diaSemana"></h3>
+                            <h1 class="center" id="diaMes"></h1>
                         </div>
                     </div>
 
-                    <div class="contenedor-tarjeta-estirada">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes en Curso</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1>
-                            </div>
+                    <div class="card border">
+                        <div class="card border mr15" style="padding: 10px;">
+                            <h3 class="center" id="mes"></h3>
+                            <h1 class="center" id="anio"></h1>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="derecha">
-                <div class="card border h-350 center">
-                    <!-- Grupo: Alta Cliente -->
-                    <div class="contenedor-tarjeta">
-                        <div class="card border mr30">
-                            <a th:href="@{/tecnico/perfilTecnico}">
-                                <div class="card border mr15">
-                                    <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
+            <div class="contenedor-exito">
+                <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
+            </div>
+            <div class="contenedor-error">
+                <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
+            </div>
+
+            <div class="contenedor-dashboard">
+                <div class="izquierda">
+                    <ul class="dropdown-menu card border">
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/equipos-negro.png}" alt="equipos">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Equipos</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/orden/ordenes}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/reparaciones-negro.png}"
+                                            alt="reparaciones-negro">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Ordenes</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li class="center">
+                            <div class="card border mrt-5 w90 center">
+                                <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
+                                    <div class="center">
+                                        <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
+                                    </div>
+                                    <div class="mrt-10">
+                                        <p class="tf-14">Cerrar Sesión</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="centro">
+                    <div class="spac-around">
+
+                        <div class="contenedor-tarjeta-estirada-2">
+                            <div class="card border" style="height: 190px;">
+                                <div class="card border" style="margin: 15px; height: 160px;">
+                                    <br><br>
+                                    <h3 class="center">Ordenes Pendientes</h3>
+                                    <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="contenedor-tarjeta-estirada-2">
+                            <div class="card border" style="height: 190px;">
+                                <div class="card border" style="margin: 15px; height: 160px;">
+                                    <br><br>
+                                    <h3 class="center">Ordenes en Curso</h3>
+                                    <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="derecha">
+                    <div class="card border center">
+                        <!-- Grupo: Alta Cliente -->
+                        <div class="contenedor-tarjeta-2">
+                            <div class="card border">
+                                <a th:href="@{/tecnico/perfilTecnico}">
+
+                                    <img class="img-card" src="/iconos/usuario.png" alt="usuario">
                                     <h5 class="center black">Ver Perfil</h5>
-                                </div>
-                            </a>
+
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
 
     </main>
     <br><br>
